--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ Nguyễn Lê Duy Phát - 1312422
 Hive là một kho dữ liệu (data warehouse)  xử lý các dữ liệu dạng cấu trúc trên nền tảng Hadoop. 
 Sử dụng để tổng hợp, tạo truy vấn và phân tích dữ liệu.
 Hive có ngôn ngữ truy vấn được hỗ trợ truy xuất giống SQL (HiveQL / HQL)
-
+(hinh1.png)
+	   hinh2.gif
 <h2>So sánh ngôn ngữ HiveQL và SQL</h2>
 	HIVE	SQL
 Phát triển 	Facebook	ISO/IEC(1986)
