--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Phạm Văn Hà - 1312162
 Nguyễn Đình Phát - 1312420
 Nguyễn Lê Duy Phát - 1312422
 	   
-https://github.com/NOSQL-2017/seminar-1312162-1312420-1312422-seminar-hive/blob/master/hinh2.gif
+<img src=https://github.com/NOSQL-2017/seminar-1312162-1312420-1312422-seminar-hive/blob/master/hinh2.gif/>
 	   
 <h2>Thông tin về Hive</h2>
 Hive là một kho dữ liệu (data warehouse)  xử lý các dữ liệu dạng cấu trúc trên nền tảng Hadoop. 
