--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ Phạm Văn Hà - 1312162
 Nguyễn Đình Phát - 1312420
 Nguyễn Lê Duy Phát - 1312422
 	   
-<img src=https://github.com/NOSQL-2017/seminar-1312162-1312420-1312422-seminar-hive/blob/master/hinh2.gif/>
-	   
+<img src="https://github.com/NOSQL-2017/seminar-1312162-1312420-1312422-seminar-hive/blob/master/hinh2.gif"/>
+	<img src ="https://github.com/NOSQL-2017/seminar-1312162-1312420-1312422-seminar-hive/blob/master/hinh1.png "/>  
 <h2>Thông tin về Hive</h2>
 Hive là một kho dữ liệu (data warehouse)  xử lý các dữ liệu dạng cấu trúc trên nền tảng Hadoop. 
 Sử dụng để tổng hợp, tạo truy vấn và phân tích dữ liệu.
