--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </li>
 </ul>
 <p style="text-align: justify; padding-left: 30px;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">It provides the user an ability to compare the reference data present in the RCMED with the climate model output data fetched from some other sources to perform different kinds of analysis and evaluation. You can refer to the image given below to understand the architecture of RCMES.&nbsp;</span></p>
-<p style="text-align: justify; padding-left: 30px;"><img class="aligncenter size-full wp-image-39337" src="./Hive Tutorial _ Hive Architecture _ NASA Case Study _ Edureka_files/NASA-Case-Study-Hive-Tutorial-Edureka.gif" alt="NASA Case Study - Hive Tutorial - Edureka" width="815" height="319"></p>
+<p style="text-align: justify; padding-left: 30px;"><img class="aligncenter size-full wp-image-39337" src="./hinh2.gif" alt="NASA Case Study - Hive Tutorial - Edureka" width="815" height="319"></p>
 <p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">The reference data in the RCMED comes from satellite-based remote sensing, according to the different parameters required for climate model evaluation.&nbsp;For example – AIRS (Atmospheric Infrared Sounder) provide parameters like surface air temperature, temperature and Geopotential, TRMM (Tropical Rainfall Measurement Mission) provides monthly precipitation, etc.</span></p>
 <h3 style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;"><strong>Problems faced by NASA using the MySQL Database System:</strong></span></h3>
 <ul style="text-align: justify;">
