--- a/index.html
+++ b/index.html
@@ -23,12 +23,24 @@
 </ul>
 
 
-<h2><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">Hive: Hive là gì?</span></strong></h2>
+<h2><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;"> * Hive là gì?</span></strong></h2>
 <p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">
 	Hive là một kho dữ liệu (data warehouse)  xử lý các dữ liệu trên nền tảng Hadoop. 
 	Nhiệm vụ chính của Hive là để tổng hợp, tạo truy vấn và phân tích dữ liệu.
 	Hive có ngôn ngữ truy vấn được hỗ trợ truy xuất giống SQL (HiveQL / HQL).
 </span></p>
 <p style="text-align: center;"><span style="font-family: verdana, geneva, sans-serif; font-size: 20px; color: #3366ff;"><strong>&nbsp;SQL + Hadoop MapReduce = HiveQL</strong></span></p>
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">Vì sao Hive ra đời?</span></strong></h2>
+<p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh1.png" ></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">	
+Ngày nay, xã hội càng phát triển nên nhu cầu sử dụng mạng xã hội ngày càng mở rộng, người dùng Facebook càng ngày càng tăng đòi hỏi khả năng xử lý các truy vấn, hình ảnh, lưu trữ dữ liệu… càng lớn.
+Để khắc phục vấn đề trên, Facebook đã tạo ra Hive 
+</span></p>
+<h3 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Sự ra đời của Hive:</span></strong></h3>
+<ul>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">•	Làm giảm sự phức tạp cho MapReduce.</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">•	Đối phó với khối lượng ngày càng tăng và sự đa dạng dữ liệu mà không ảnh hưởng hiệu suất của hệ thống.</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">•	Nó như là 1 công cụ ETL (Extract, Transform, Load) hiệu quả.</span></strong></a></li>
+</ul>
 </body>
 </html>
