--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Kiến trúc của Apache Hive</span></strong></a></li>
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Cấu trúc dữ liệu lưu trữ trong Hive</span></strong></a></li>
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Data Model</span></strong></a></li>
 </ul>
 
 
@@ -38,9 +37,52 @@ Ngày nay, xã hội càng phát triển nên nhu cầu sử dụng mạn
 </span></p>
 <h3 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Sự ra đời của Hive:</span></strong></h3>
 <ul>
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">•	Làm giảm sự phức tạp cho MapReduce.</span></strong></a></li>
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">•	Đối phó với khối lượng ngày càng tăng và sự đa dạng dữ liệu mà không ảnh hưởng hiệu suất của hệ thống.</span></strong></a></li>
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">•	Nó như là 1 công cụ ETL (Extract, Transform, Load) hiệu quả.</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Làm giảm sự phức tạp cho MapReduce.</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Đối phó với khối lượng ngày càng tăng và sự đa dạng dữ liệu mà không ảnh hưởng hiệu suất của hệ thống.</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Nó như là 1 công cụ ETL (Extract, Transform, Load) hiệu quả.</span></strong></a></li>
 </ul>
+
+
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">MapReduce</span></strong></h2>
+
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">	
+MapReduce được thiết kế bởi Google như 1 mô hình lập trình xử lý tập dữ liệu lớn song song, thuật toán được phân tán trên 1 cụm.
+MapReduce gồm các thủ tục: 1 Map() và 1 Reduce(). 
+Thủ tục Map() lọc (filter) và phân loại (sort) trên dữ liệu 
+Thủ tục Reduce() thực hiện tổng hợp dữ liệu 
+</span></p>
+<p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh3.png" ></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">	
+Ngày nay, xã hội càng phát triển nên nhu cầu sử dụng mạng xã hội ngày càng mở rộng, người dùng Facebook càng ngày càng tăng đòi hỏi khả năng xử lý các truy vấn, hình ảnh, lưu trữ dữ liệu… càng lớn.
+Để khắc phục vấn đề trên, Facebook đã tạo ra Hive 
+</span></p>
+
+
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">Kiến trúc của Apache Hive</span></strong></h2>
+<ul>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">Interface(UI): Hive cung cấp một giao diện web để tương tác với HDFS. Tương tác command line.</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	HDFS: lưu trữ dữ liệu.</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Meta store: Lưu thông tin cơ bản về cấu trúc dữ liệu. Các thông tin gồm ID của database (schema), ID của table, ID của index, định dạng của table, ...</span></strong></a></li><li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Hive QL: Tương tự như SQL, dùng để truy vấn dữ liệu dựa trên thông tin metastore cung cấp. Đây là phương pháp thay thế cho việc phải viết trương trình mapreduce truyền thống.</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Execution Engine: Chuyển hóa các lệnh Hive QL thành MapReduce.</span></strong></a></li>
+</ul>
+<p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh4.png" ></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Hình ảnh dưới đây mô tả kiến trúc Hive và dòng chảy trong đó truy vấn được gửi vào Hive và cuối cùng được xử lý bằng cách sử dụng khuôn khổ MapReduce: 
+</span></p>
+<p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh6.png" ></p>
+
+
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Như thể hiện trong hình trên, kiến trúc Hive có thể được phân loại thành các thành phần sau: 
+</span></p>
+<ul>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">Hive Client: Hive hỗ trợ ứng dụng được viết bằng nhiều ngôn ngữ như Java, C ++, Python ... sử dụng trình điều khiển JDBC, Thrift và ODBC. Vì vậy, một người luôn có thể viết ứng dụng khách hive viết bằng một ngôn ngữ của sự lựa chọn của họ.</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Hive Client: Hive hỗ trợ ứng dụng được viết bằng nhiều ngôn ngữ như Java, C ++, Python ... sử dụng trình điều khiển JDBC, Thrift và ODBC. Vì vậy, một người luôn có thể viết ứng dụng khách hive viết bằng một ngôn ngữ của sự lựa chọn của họ.</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Hive Client: Hive hỗ trợ ứng dụng được viết bằng nhiều ngôn ngữ như Java, C ++, Python ... sử dụng trình điều khiển JDBC, Thrift và ODBC. Vì vậy, một người luôn có thể viết ứng dụng khách hive viết bằng một ngôn ngữ của sự lựa chọn của họ.</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Lưu trữ được phân phối: Theo Hive được cài đặt trên Hadoop, nó sử dụng HDFS cơ bản cho phân phối lưu trữ.</span></strong></a></li>
+</ul>
+
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">Cấu trúc dữ liệu lưu trữ trong Hive</span></strong></h2>
+<p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh5.png" ></p>
+
+
 </body>
 </html>
