--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@ Ngày nay, xã hội càng phát triển nên nhu cầu sử dụng mạn
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Execution Engine: Chuyển hóa các lệnh Hive QL thành MapReduce.</span></strong></a></li>
 </ul>
 <p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh4.png" ></p>
-<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Hình ảnh dưới đây mô tả kiến trúc Hive và dòng chảy trong đó truy vấn được gửi vào Hive và cuối cùng được xử lý bằng cách sử dụng khuôn khổ MapReduce: 
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Hình ảnh dưới đây mô tả kiến ​​trúc Hive và dòng chảy trong đó truy vấn được gửi vào Hive và cuối cùng được xử lý bằng cách sử dụng khuôn khổ MapReduce: 
 </span></p>
 <p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh6.png" ></p>
 
 
-<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Như thể hiện trong hình trên, kiến trúc Hive có thể được phân loại thành các thành phần sau: 
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Như thể hiện trong hình trên, kiến ​​trúc Hive có thể được phân loại thành các thành phần sau: 
 </span></p>
 <ul>
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">Hive Client: Hive hỗ trợ ứng dụng được viết bằng nhiều ngôn ngữ như Java, C ++, Python ... sử dụng trình điều khiển JDBC, Thrift và ODBC. Vì vậy, một người luôn có thể viết ứng dụng khách hive viết bằng một ngôn ngữ của sự lựa chọn của họ.</span></strong></a></li>
