--- a/index.html
+++ b/index.html
@@ -5,37 +5,40 @@
 </head>
 <body>
 
-<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">CHUYÊN ĐỀ CHỌN LỌC TRONG HỆ THỐNG THÔNG TIN</span></strong></h2>
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 20px;">CHUYÊN ĐỀ CHỌN LỌC TRONG HỆ THỐNG THÔNG TIN NĂM HỌC 2016-2017</span></strong></h2>
+
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 18px;">THÔNG TIN NHÓM</span></strong></h2>
+
 <ul>
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Phạm Văn Hà - 1312162</span></strong></a></li>
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Nguyễn Đình Phát - 1312420</span></strong></a></li>
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Nguyễn Lê Duy Phát - 1312422</span></strong></a></li>
 </ul>
-<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">NỘI DUNG CHÍNH</span></strong></h2>
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 18px;">NỘI DUNG CHÍNH</span></strong></h2>
 <ul>
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Hive là gì?</span></strong></a></li>
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Vì sao Hive ra đời?</span></strong></a></li>
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">MapReduce</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">1.Hive là gì?</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">2.Vì sao Hive ra đời?</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">3.MapReduce</span></strong></a></li>
 
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Kiến trúc của Apache Hive</span></strong></a></li>
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Cấu trúc dữ liệu lưu trữ trong Hive</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">4.Kiến trúc của Apache Hive và các thành phần liên quan</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">5.Cấu trúc dữ liệu lưu trữ trong Hive</span></strong></a></li>
 </ul>
 
 
-<h2><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;"> * Hive là gì?</span></strong></h2>
+<h2><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;"> 1.Hive là gì?</span></strong></h2>
 <p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">
 	Hive là một kho dữ liệu (data warehouse)  xử lý các dữ liệu trên nền tảng Hadoop. 
 	Nhiệm vụ chính của Hive là để tổng hợp, tạo truy vấn và phân tích dữ liệu.
 	Hive có ngôn ngữ truy vấn được hỗ trợ truy xuất giống SQL (HiveQL / HQL).
 </span></p>
 <p style="text-align: center;"><span style="font-family: verdana, geneva, sans-serif; font-size: 20px; color: #3366ff;"><strong>&nbsp;SQL + Hadoop MapReduce = HiveQL</strong></span></p>
-<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">Vì sao Hive ra đời?</span></strong></h2>
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">2.Vì sao Hive ra đời?</span></strong></h2>
 <p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh1.png" ></p>
 <p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">	
-Ngày nay, xã hội càng phát triển nên nhu cầu sử dụng mạng xã hội ngày càng mở rộng, người dùng Facebook càng ngày càng tăng đòi hỏi khả năng xử lý các truy vấn, hình ảnh, lưu trữ dữ liệu… càng lớn.
-Để khắc phục vấn đề trên, Facebook đã tạo ra Hive 
+Ngày nay, xã hội càng phát triển nên nhu cầu sử dụng mạng xã hội ngày càng mở rộng, người dùng Facebook càng ngày càng tăng đòi hỏi khả năng xử lý các truy vấn, hình ảnh, lưu trữ dữ liệu… càng lớn. tạo ra một vấn đề rất lớn cần phải giải quyết chính vì vậy  Facebook đã tạo ra Hive.
 </span></p>
-<h3 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Sự ra đời của Hive:</span></strong></h3>
+
+<h3 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">3.Sự ra đời của Hive đem lại những lợi ích sau:</span></strong></h3>
 <ul>
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Làm giảm sự phức tạp cho MapReduce.</span></strong></a></li>
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Đối phó với khối lượng ngày càng tăng và sự đa dạng dữ liệu mà không ảnh hưởng hiệu suất của hệ thống.</span></strong></a></li>
@@ -43,7 +46,7 @@ Ngày nay, xã hội càng phát triển nên nhu cầu sử dụng mạn
 </ul>
 
 
-<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">MapReduce</span></strong></h2>
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">4.MapReduce</span></strong></h2>
 
 <p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">	
 MapReduce được thiết kế bởi Google như 1 mô hình lập trình xử lý tập dữ liệu lớn song song, thuật toán được phân tán trên 1 cụm.
@@ -52,13 +55,8 @@ Thủ tục Map() lọc (filter) và phân loại (sort) trên dữ liệu
 Thủ tục Reduce() thực hiện tổng hợp dữ liệu 
 </span></p>
 <p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh3.png" ></p>
-<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">	
-Ngày nay, xã hội càng phát triển nên nhu cầu sử dụng mạng xã hội ngày càng mở rộng, người dùng Facebook càng ngày càng tăng đòi hỏi khả năng xử lý các truy vấn, hình ảnh, lưu trữ dữ liệu… càng lớn.
-Để khắc phục vấn đề trên, Facebook đã tạo ra Hive 
-</span></p>
 
-
-<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">Kiến trúc của Apache Hive và các thành phần liên quan</span></strong></h2>
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">5.Kiến trúc của Apache Hive và các thành phần liên quan</span></strong></h2>
 <ul>
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">Interface(UI): Hive cung cấp một giao diện web để tương tác với HDFS. Tương tác command line.</span></strong></a></li>
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	HDFS: lưu trữ dữ liệu.</span></strong></a></li>
@@ -66,7 +64,7 @@ Ngày nay, xã hội càng phát triển nên nhu cầu sử dụng mạn
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Execution Engine: Chuyển hóa các lệnh Hive QL thành MapReduce.</span></strong></a></li>
 </ul>
 <p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh4.png" ></p>
-<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Hình ảnh dưới đây mô tả kiến ​​trúc Hive và dòng chảy trong đó truy vấn được gửi vào Hive và cuối cùng được xử lý bằng cách sử dụng khuôn khổ MapReduce: 
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Hình ảnh dưới đây mô tả kiến ​​trúc Hive và cách mà dữ liệu truy vấn được gửi vào Hive và cuối cùng được xử lý bằng cách sử dụng MapReduce: 
 </span></p>
 <p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh6.png" ></p>
 
@@ -80,7 +78,7 @@ Ngày nay, xã hội càng phát triển nên nhu cầu sử dụng mạn
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Lưu trữ được phân phối: Theo Hive được cài đặt trên Hadoop, nó sử dụng HDFS cơ bản cho phân phối lưu trữ.</span></strong></a></li>
 </ul>
 
-<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">Cấu trúc dữ liệu lưu trữ trong Hive</span></strong></h2>
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">6.Cấu trúc dữ liệu lưu trữ trong Hive</span></strong></h2>
 
 <p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh5.png" ></p>
 
@@ -88,7 +86,7 @@ Ngày nay, xã hội càng phát triển nên nhu cầu sử dụng mạn
 <p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Dữ liệu trong Hive có thể được phân loại thành ba loại cấp sau: 
 </span></p>
 <ul>
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">Tables: Chúng rất tương tự như bảng (tables) trong RDBMS và chứa các dòng (rows). Hive chỉ được xếp lớp trên HDFS, do đó tables được ánh xạ trực tiếp vào các thư mục của hệ thống tập tin. Nó cũng hỗ trợ các tables được lưu trên các hệ thống tập tin khác. được cha</span></strong></a>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">Tables: Chúng rất tương tự như bảng (tables) trong RDBMS và chứa các dòng (rows). Hive chỉ được xếp lớp trên HDFS, do đó tables được ánh xạ trực tiếp vào các thư mục của hệ thống tập tin. Nó cũng hỗ trợ các tables được lưu trên các hệ thống tập tin khác.</span></strong></a>
 <p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Có 2 loại bảng trong Hive đó là Managed Table (có trách nhiệm quản lý dữ liệu của một bảng) và External Table(không chịu trách nhiệm quản lý dữ liệu.)
 </span></p>
 </li>
@@ -98,27 +96,54 @@ Ngày nay, xã hội càng phát triển nên nhu cầu sử dụng mạn
 
 <p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Command tạo cấu trúc như sau:</span></p>
 <ul>
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">Managed Table: •	CREATE TABLE table_name> (column1 data_type, column2 data_type);
-		•	LOAD DATA INPATH HDFS_file_location> INTO table managed_table;"
-</span></strong></a></li>
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">Managed Table: 
+		
+</span></strong></a>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">
+•	CREATE TABLE table_name> (column1 data_type, column2 data_type);
+</span></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">
+•	LOAD DATA INPATH HDFS_file_location> INTO table managed_table;"
+</span></p>
+</li>
 
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">External Table:•	CREATE EXTERNAL TABLE table_name> (column1 data_type, column2 data_type) LOCATION ‘table_hive_location>’;
-	•	LOAD DATA INPATH HDFS_file_location>’ INTO TABLE table_name>;
+<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">External Table:
+	
 
-</span></strong></a></li>
+</span></strong></a>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">
+•	CREATE EXTERNAL TABLE table_name> (column1 data_type, column2 data_type) LOCATION ‘table_hive_location>’;
+</span></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">
+•	LOAD DATA INPATH HDFS_file_location>’ INTO TABLE table_name>;
+</span></p>
+</li>
 
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">Partitions: 
+</span></strong></a>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">
 •	CREATE TABLE table_name (column1 data_type, column2 data_type) PARTITIONED BY (partition1 data_type, partition2 data_type,….);
-</span></strong></a></li>
+</span></p>
+</li>
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">Buckets: 
 •	CREATE TABLE table_name PARTITIONED BY (partition1 data_type, partition2 data_type,….) CLUSTERED BY (column_name1, column_name2, …) SORTED BY (column_name [ASC|DESC], …)] INTO num_buckets BUCKETS;
-</span></strong></a></li>
+</span></strong></a>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">
+•	CREATE TABLE table_name PARTITIONED BY (partition1 data_type, partition2 data_type,….) CLUSTERED BY (column_name1, column_name2, …) SORTED BY (column_name [ASC|DESC], …)] INTO num_buckets BUCKETS;
+</span></p>
+</li>
 
 </ul>
 	
 <p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Ví dụ về một cấu trúc dữ liệu trong HIVE 
 </span></p>
 <p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh7.png" ></p>
-
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">TÀI LIỆU THAM KHẢO</span></strong></h2>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">https://www.edureka.co/blog/hive-tutorial/
+</span></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">https://www.youtube.com/watch?v=tKNGB5IZPFE&t=6642s
+</span></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">https://blog.sqlauthority.com/
+</span></p>
 </body>
 </html>
