--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ Thủ tục Reduce() thực hiện tổng hợp dữ liệu
 <h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">TÀI LIỆU THAM KHẢO</span></strong></h2>
 <p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">https://www.edureka.co/blog/hive-tutorial/
 </span></p>
-<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">https://www.youtube.com/watch?v=tKNGB5IZPFE&t=6642s
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">https://www.youtube.com/watch?v=tKNGB5IZPFE
 </span></p>
 <p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">https://blog.sqlauthority.com/
 </span></p>
