--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 </ul>
 <h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 18px;">NỘI DUNG CHÍNH</span></strong></h2>
 <ul>
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">1.Hive là gì?</span></strong></a></li>
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">2.Vì sao Hive ra đời?</span></strong></a></li>
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">3.MapReduce</span></strong></a></li>
+<ol style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">1.Hive là gì?</span></strong></a></ol>
+<ol style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">2.Vì sao Hive ra đời?</span></strong></a></ol>
+<ol style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">3.MapReduce</span></strong></a></ol>
 
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">4.Kiến trúc của Apache Hive và các thành phần liên quan</span></strong></a></li>
-<li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">5.Cấu trúc dữ liệu lưu trữ trong Hive</span></strong></a></li>
+<ol style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">4.Kiến trúc của Apache Hive và các thành phần liên quan</span></strong></a></ol>
+<ol style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">5.Cấu trúc dữ liệu lưu trữ trong Hive</span></strong></a></ol>
 </ul>
 
 
@@ -64,12 +64,12 @@ Thủ tục Reduce() thực hiện tổng hợp dữ liệu
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Execution Engine: Chuyển hóa các lệnh Hive QL thành MapReduce.</span></strong></a></li>
 </ul>
 <p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh4.png" ></p>
-<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Hình ảnh dưới đây mô tả kiến trúc Hive và cách mà dữ liệu truy vấn được gửi vào Hive và cuối cùng được xử lý bằng cách sử dụng MapReduce: 
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Hình ảnh dưới đây mô tả kiến ​​trúc Hive và cách mà dữ liệu truy vấn được gửi vào Hive và cuối cùng được xử lý bằng cách sử dụng MapReduce: 
 </span></p>
 <p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh6.png" ></p>
 
 
-<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Như thể hiện trong hình trên, kiến trúc Hive có thể được phân loại thành các thành phần sau: 
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Như thể hiện trong hình trên, kiến ​​trúc Hive có thể được phân loại thành các thành phần sau: 
 </span></p>
 <ul>
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">Hive Client: Hive hỗ trợ ứng dụng được viết bằng nhiều ngôn ngữ như Java, C ++, Python ... sử dụng trình điều khiển JDBC, Thrift và ODBC. Vì vậy, một người luôn có thể viết ứng dụng khách hive viết bằng một ngôn ngữ của sự lựa chọn của họ.</span></strong></a></li>
@@ -134,6 +134,17 @@ Thủ tục Reduce() thực hiện tổng hợp dữ liệu
 </li>
 
 </ul>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">Ví dụ về một cấu trúc dữ liệu trong HIVE 
+</span></p>
+<p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh7.png" ></p>
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">TÀI LIỆU THAM KHẢO</span></strong></h2>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">https://www.edureka.co/blog/hive-tutorial/
+</span></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">https://www.youtube.com/watch?v=tKNGB5IZPFE
+</span></p>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">https://blog.sqlauthority.com/
+</span></p>
 
 </body>
 </html>
+	
