--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 20px;">CHUYÊN ĐỀ CHỌN LỌC TRONG HỆ THỐNG THÔNG TIN NĂM HỌC 2016-2017</span></strong></h2>
-
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 20px;">ĐỀ TÀI : HIVE</span></strong></h2>
 <h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 18px;">THÔNG TIN NHÓM</span></strong></h2>
 
 <ul>
