--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 Ngày nay, xã hội càng phát triển nên nhu cầu sử dụng mạng xã hội ngày càng mở rộng, người dùng Facebook càng ngày càng tăng đòi hỏi khả năng xử lý các truy vấn, hình ảnh, lưu trữ dữ liệu… càng lớn. tạo ra một vấn đề rất lớn cần phải giải quyết chính vì vậy  Facebook đã tạo ra Hive.
 </span></p>
 
-<h3 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">3.Sự ra đời của Hive đem lại những lợi ích sau:</span></strong></h3>
+<h3 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">  Sự ra đời của Hive đem lại những lợi ích sau:</span></strong></h3>
 <ul>
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Làm giảm sự phức tạp cho MapReduce.</span></strong></a></li>
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Đối phó với khối lượng ngày càng tăng và sự đa dạng dữ liệu mà không ảnh hưởng hiệu suất của hệ thống.</span></strong></a></li>
@@ -46,7 +46,7 @@ Ngày nay, xã hội càng phát triển nên nhu cầu sử dụng mạn
 </ul>
 
 
-<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">4.MapReduce</span></strong></h2>
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">3.MapReduce</span></strong></h2>
 
 <p style="text-align: justify;"><span style="font-family: verdana, geneva, sans-serif; font-size: 14px;">	
 MapReduce được thiết kế bởi Google như 1 mô hình lập trình xử lý tập dữ liệu lớn song song, thuật toán được phân tán trên 1 cụm.
@@ -56,7 +56,7 @@ Thủ tục Reduce() thực hiện tổng hợp dữ liệu
 </span></p>
 <p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh3.png" ></p>
 
-<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">5.Kiến trúc của Apache Hive và các thành phần liên quan</span></strong></h2>
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">4.Kiến trúc của Apache Hive và các thành phần liên quan</span></strong></h2>
 <ul>
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">Interface(UI): Hive cung cấp một giao diện web để tương tác với HDFS. Tương tác command line.</span></strong></a></li>
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	HDFS: lưu trữ dữ liệu.</span></strong></a></li>
@@ -78,7 +78,7 @@ Thủ tục Reduce() thực hiện tổng hợp dữ liệu
 <li style="text-align: justify;"><a><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 12px;">	Lưu trữ được phân phối: Theo Hive được cài đặt trên Hadoop, nó sử dụng HDFS cơ bản cho phân phối lưu trữ.</span></strong></a></li>
 </ul>
 
-<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">6.Cấu trúc dữ liệu lưu trữ trong Hive</span></strong></h2>
+<h2 style="text-align: justify;"><strong><span style="font-family: verdana, geneva, sans-serif; font-size: 16px;">5.Cấu trúc dữ liệu lưu trữ trong Hive</span></strong></h2>
 
 <p style="text-align: justify;"><img class="aligncenter size-full wp-image-39181" src="./hinh5.png" ></p>
 
